web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
// #event-calendar-header {
//   @include clearfix();

//   .entry-title {
//     float: left;
//   }
// }
// .switch-archive-view {
//   font-weight: $global-weight-bold;
//   float: right;

//   @include breakpoint(small only) {
//     font-size: rem-calc(12);
//   }

//   &.top {
//     margin-bottom: 0;

//     @include breakpoint(medium) {
//       margin-top: 1rem;
//     }
//   }

//   &.bottom {
//     margin-bottom: $global-margin * 3;
//   }
// }

.event-calendar-year {
  margin-bottom: $global-margin * 1.5;
  font-size: rem-calc(25);
  font-weight: $global-weight-bold;
  border-bottom: 3px solid $gray;
  padding: 0 0 0.25em;
  color: $charcoal;
}

.callout + .event-calendar-year {
  margin-top: 2rem;
}

.event-calendar-month {
  border-top: $hr-border;
  margin-top: 1rem;
  padding-top: 1rem;
  font-size: rem-calc(25);
}

.event-calendar-year + .event-calendar-month {
  border-top: none;
  margin-top: 0;
  padding-top: 0;
}

form.searchandfilter {
  margin-bottom: $global-margin;

  > ul {
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    align-items: center;

    > li {
      margin: 0 0 $global-margin;
      padding: 0;
      width: 100%;
      max-width: 100%;

      &[data-sf-field-name='search'] {
        width: 100% !important;
        padding-right: 0 !important;

        label {
          display: block;
        }

        input {
          margin: 0 !important;
        }
      }

      @include breakpoint(medium) {
        width: rem-calc(350);

        &:not(:last-child) {
          padding-right: $global-margin;
        }
      }

      @include breakpoint(large) {
        width: 38%;
      }

      &.sf-field-reset {
        @include breakpoint(medium) {
          max-width: 24%;
        }
      }
    }

    input:focus {
      box-shadow: none;
    }

    select {
      margin: 0;
    }

    .chosen-container {
      width: 100% !important;
      font-size: $input-font-size;
      line-height: $input-line-height;

      a {
        line-height: $input-line-height;
        border: $input-border;
        padding: $input-padding;
        box-shadow: none;
        height: ($input-font-size * unitless-calc($input-line-height)) +
          (get-side($input-padding, 'top') + get-side($input-padding, 'bottom')) - rem-calc(1) !important;
        color: $input-color !important;
      }

      .chosen-single div {
        width: calc(1rem + 1px);

        b {
          @include css-triangle(4px, $gray, down);
          background-image: none;
          border-top-width: 6px;
          position: absolute;
          top: calc(50% - 3px);
        }
      }

      .chosen-single {
        border-radius: 0;
        background: $white;
      }

      .chosen-drop {
        border-radius: 0;
        box-shadow: 0 0.25rem 0 0 rgba(0, 0, 0, 0.2);
      }
    }

    .search-filter-reset {
      @include button(
        $expand: true,
        $background: $white-smoke,
        $background-hover: darken($white-smoke, 3%),
        $color: darken($primary-color, 10%),
        $style: solid
      );
      margin: 0;
      border-radius: rem-calc(8);
      box-shadow: none;
    }
  }

  &#search-filter-form-143 {
    > ul {
      > li {
        @include breakpoint(large) {
          width: 20%;
          &.sf-field-taxonomy-lfevent-category {
            width: 38%;
          }
        }
      }
    }
  }
}

.results-count {
  margin-top: -$global-margin;
  margin-bottom: $global-margin * 2;
  color: $dark-gray;
}

